<resources>
    <string name="app_name">My Movie Companion</string>
    <string name="simple_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="movie_backdrop">Movie Backdrop</string>
    <string name="cast">Cast</string>
    <string name="similar_movies">Similar Movies</string>
    <string name="fab">fab</string>
    <string name="popular_movies">Popular movies</string>
    <string name="now_playing">Now playing</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="title_activity_test">Test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="cast_image">Profile image of cast member</string>
    <string name="search_movies">Search movies…</string>
    <string name="label_votes">%s votes</string>
    <string name="language">Language</string>
    <string name="release_date">Release date</string>
    <string name="overview">Overview</string>
    <string name="logo">logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="username">Username</string>
    <string name="user_picture">User picture</string>
    <string name="empty">--</string>
    <string name="rate_this_movie">Rate this movie</string>
    <string name="logout">Logout</string>
    <string name="watchlist">Watchlist</string>
    <string name="user">User</string>
    <string name="genres">Genres</string>
    <string name="share">Share</string>
    <string name="add_to_watchlist">Add to watchlist</string>
    <string name="watched_movies">Watched Movies</string>
</resources>