<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/genres">
        <menu>
            <group
                android:id="@+id/menu_genres_group"
                android:checkableBehavior="none">
                <item
                    android:id="@+id/Action"
                    android:title="Action" />
                <item
                    android:id="@+id/Adventure"
                    android:title="Adventure" />
                <item
                    android:id="@+id/Animation"
                    android:title="Animation" />
                <item
                    android:id="@+id/Comedy"
                    android:title="Comedy" />
                <item
                    android:id="@+id/Crime"
                    android:title="Crime" />
                <item
                    android:id="@+id/Documentary"
                    android:title="Documentary" />
                <item
                    android:id="@+id/Drama"
                    android:title="Drama" />
                <item
                    android:id="@+id/Family"
                    android:title="Family" />
                <item
                    android:id="@+id/Fantasy"
                    android:title="Fantasy" />
                <item
                    android:id="@+id/History"
                    android:title="History" />
                <item
                    android:id="@+id/Horror"
                    android:title="Horror" />
                <item
                    android:id="@+id/Music"
                    android:title="Music" />
                <item
                    android:id="@+id/Mystery"
                    android:title="Mystery" />
                <item
                    android:id="@+id/Romance"
                    android:title="Romance" />
                <item
                    android:id="@+id/Science"
                    android:title="Science Fiction" />
                <item
                    android:id="@+id/TV"
                    android:title="TV Movie" />
                <item
                    android:id="@+id/Thriller"
                    android:title="Thriller" />
                <item
                    android:id="@+id/War"
                    android:title="War" />
                <item
                    android:id="@+id/Western"
                    android:title="Western" />
            </group>
        </menu>
    </item>

    <item android:title="@string/user">
        <menu>
            <group
                android:id="@+id/menu_user_group"
                android:checkableBehavior="none">
                <item
                    android:id="@+id/menu_watched"
                    android:icon="@drawable/ic_star_white_24dp"
                    android:title="@string/watched_movies" />
                <item
                    android:id="@+id/menu_watchlist"
                    android:icon="@drawable/ic_bookmark_watched"
                    android:title="@string/watchlist" />
                <item
                    android:id="@+id/menu_logout"
                    android:icon="@drawable/ic_baseline_login_24"
                    android:title="@string/logout" />
            </group>
        </menu>
    </item>
</menu>