<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.mhamed.mymoviecompanion.model.ImageSizeType" />

        <variable
            name="movie"
            type="com.mhamed.mymoviecompanion.model.Movie" />
    </data>




        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            tools:context=".ui.MovieDetailActivity">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/detail_movie_cover"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:contentDescription="@string/movie_backdrop"
                    android:scaleType="centerCrop"
                    app:imagePath="@{movie.backdropPath}"
                    app:imageSizeType="@{ImageSizeType.BACKDROP}"
                    app:layout_constraintDimensionRatio="780:439"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <ToggleButton
                    android:id="@+id/share"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:layout_marginStart="32dp"
                    android:background="@drawable/ic_baseline_share_24"
                    android:onClick="openDialog"
                    android:textOff=""
                    android:textOn=""
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/detail_movie_cover"
                    tools:ignore="MissingConstraints"></ToggleButton>

                <!--            <ImageView-->
                <!--                android:id="@+id/imageView"-->
                <!--                android:layout_width="0dp"-->
                <!--                android:layout_height="0dp"-->
                <!--                android:src="@drawable/gradient_bg"-->
                <!--                app:layout_constraintBottom_toBottomOf="@+id/detail_movie_cover"-->
                <!--                app:layout_constraintEnd_toEndOf="@+id/detail_movie_cover"-->
                <!--                app:layout_constraintStart_toStartOf="parent"-->
                <!--                app:layout_constraintTop_toTopOf="@+id/detail_movie_cover" />-->

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/play_fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:contentDescription="@string/fab"
                    android:focusable="true"
                    android:src="@drawable/ic_play_arrow_black_24dp"
                    app:layout_constraintBottom_toBottomOf="@+id/detail_movie_cover"
                    app:layout_constraintEnd_toEndOf="@+id/detail_movie_cover"
                    app:layout_constraintStart_toStartOf="@+id/detail_movie_cover"
                    app:layout_constraintTop_toTopOf="@+id/detail_movie_cover" />

                <ImageView
                    android:id="@+id/detail_movie_img"
                    android:layout_width="@dimen/dimens_poster_width"
                    android:layout_height="@dimen/dimens_poster_height"
                    android:layout_marginStart="@dimen/dimens_small"
                    android:contentDescription="@string/movie_poster"
                    android:scaleType="centerCrop"
                    android:transitionName="sharedName"
                    app:imagePath="@{movie.posterPath}"
                    app:imageSizeType="@{ImageSizeType.POSTER}"
                    app:layout_constraintBottom_toBottomOf="@+id/detail_movie_cover"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/detail_movie_cover" />

                <TextView
                    android:id="@+id/detail_movie_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:text="@{movie.title}"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/detail_movie_img"
                    app:layout_constraintTop_toBottomOf="@+id/detail_movie_cover" />
                <TextView
                    android:id="@+id/detail_movie_desc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:lineSpacingExtra="8dp"
                    android:text="@{movie.overview}"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/detail_movie_img" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:textStyle="bold"
                    android:text="@string/cast"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/detail_movie_desc"
                    app:layout_constraintVertical_bias="0.0" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/cast_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />


                <ToggleButton
                    android:id="@+id/favoris"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_margin="10dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="60dp"
                    android:background="@drawable/ic_baseline_notes_24"
                    android:onClick="openDialog"
                    android:textOff=""
                    android:textOn=""
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.064"
                    app:layout_constraintStart_toEndOf="@+id/detail_movie_img"
                    app:layout_constraintTop_toBottomOf="@+id/detail_movie_title"
                    tools:ignore="MissingConstraints" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
</layout>